gitops-repo/app1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1nginxaks
  namespace: app1

spec:
  replicas: 2

  selector:
    matchLabels:
      app: app1nginxaks

  template:
    metadata:
      labels:
        app: app1nginxaks

    spec:
      containers:
      - name: app1nginxaks

        image: akscontaineregistrydemo.azurecr.io/app1nginxaks:1

        imagePullPolicy: Always

        ports:
        - containerPort: 80
