gitops-repo/app1/service.yml
apiVersion: v1
kind: Service

metadata:
  name: app1nginxaks
  namespace: app1

spec:
  selector:
    app: app1nginxaks

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
