gitops-repo/app1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app1nginxaks
  namespace: app1

spec:
  ingressClassName: nginx

  rules:

  - http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: app1nginxaks

            port:

              number: 80
